evaluator/sources/2140028896.error
/eval-folder/2140028896.cpp: In function 'int main()':
/eval-folder/2140028896.cpp:5:16: error: 'printf' was not declared in this scope
     printf("%x");
                ^
